--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,7 +4,6 @@
 @import 'colors';
 @import 'mediaQueries';
 
-
 /* Global */
 html {
   font-size: 100%;
@@ -32,7 +31,6 @@ nav a {
   padding: 5px;
   text-decoration: none;
   transition: .2s;
-
   &:hover,
   &:focus {
     transform: scale(1.1);
@@ -63,8 +61,8 @@ h4 {
 /* Header*/
 header {
   min-height: 100vh;
-  background-image: linear-gradient(to top rgba(0, 0, 0, 0.7),
-   rgba(0, 0, 0, 0.7)), url(../assets/banner.jpg);
+  // background-image: url(../assets/banner.jpg);
+  background-image: linear-gradient(to top rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/banner.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -141,7 +139,7 @@ header {
 /* Main */
 .main {
   // https://css-tricks.com/couple-takes-sticky-footer/
-  min-height: calc(100vh - 180px);
+  min-height: calc(100vh - 180px); // for sticky footer
   display: flex;
   align-items: center;
   background-color: $secondary-background-color;
@@ -197,9 +195,9 @@ header {
   justify-content: center;
   align-items: center;
 
-  h4 {
-    @include secondary-font(calc(1.3rem + 1.3vw), 2.2, calc(0.25rem + 0.25vw))
-  }
+    h4 {
+      @include secondary-font(calc(1.3rem + 1.3vw), 2.2, calc(0.25rem + 0.25vw))
+    }
 }
 
 .search-buttons {
@@ -210,7 +208,6 @@ header {
   button {
     @include primary-font(calc(.7rem + .7vw), 1.6, calc(0.05rem + 0.05vw));
     color: $primary-text-color;
-    background-color: $primary-color;
     border: 1px solid $warning-color;
     text-align: center;
     padding: 5px 10px;
@@ -222,11 +219,17 @@ header {
   }
 }
 
+.search-mode-one {
+  background-color: $primary-color;
+}
+
+.search-mode-two {
+  background-color: $primary-color;
+}
 
 /* Form */
 .invalid-input {
-  border: 1px solid $secondary-warning-color;
-  background-color: $secondary-warning-color;
+  border: 1px solid red;
 }
 
 form {
@@ -273,7 +276,6 @@ button:focus {
   opacity: 0.7;
 }
 
-
 /* Dynamically Added Recipe Container */
 .recipe-container {
   display: flex;
@@ -297,7 +299,6 @@ button:focus {
     font-size: 1.5rem;
     margin: 2rem;
     transition: 0.2s;
-
     &:hover,
     &:focus {
     transform: scale(1.1);
@@ -310,9 +311,10 @@ button:focus {
     justify-content: center;
     flex-wrap: wrap;
   }
-
+  
   .recipe-details {
     background-color: $primary-background-color;
+    border-radius: 5%;
     text-align: center;
     width: 300px;
     display: flex;
@@ -369,7 +371,6 @@ footer {
 .juno-footer-link {
   text-decoration: none;
 }
-
 
 /* Dynamic Modal */
 .ui-dialog-titlebar {
